--- a/exo-7/index.html
+++ b/exo-7/index.html
@@ -46,27 +46,32 @@
 				</div>
 			</div>
 			<div class="form-row">
-					<div class="form-group col-md-6">
-							<label for="objectName">Entrer un nouvel objet :</label>
-							<input class="form-control" type="text" name="objectName" id="objectName" placeholder="Nom de l'objet">
-							<label for="objectType">Entrer son type :</label>
-							<input class="form-control" type="text" name="objectType" id="objectType" placeholder="Type de l'objet">
-							<label for="description">Entrer une description :</label>
-							<textarea class="form-control" rows="4" cols="50" type="text" name="description" id="objectDescription" placeholder="Description de l'objet"></textarea>
-							<label for="price">Entrer un prix :</label>		
-							<input class="form-control" type="number" name="price" id="objectPrice" placeholder="Prix de l'objet">
-							<label for="quantity">Entrer une quantité :</label>		
-							<input class="form-control" type="number" name="quantity" id="objectQuantity" placeholder="Quantité en stock">
-							
+				<div class="form-group col-md-6">
+					<label for="objectName">Entrer un nouvel objet :</label>
+					<input class="form-control" type="text" name="objectName" id="objectName"
+						placeholder="Nom de l'objet">
+					<label for="objectType">Entrer son type :</label>
+					<input class="form-control" type="text" name="objectType" id="objectType"
+						placeholder="Type de l'objet">
+					<label for="description">Entrer une description :</label>
+					<textarea class="form-control" rows="4" cols="50" type="text" name="description"
+						id="objectDescription" placeholder="Description de l'objet"></textarea>
+					<label for="price">Entrer un prix :</label>
+					<input class="form-control" type="number" name="price" id="objectPrice"
+						placeholder="Prix de l'objet">
+					<label for="quantity">Entrer une quantité :</label>
+					<input class="form-control" type="number" name="quantity" id="objectQuantity"
+						placeholder="Quantité en stock">
 
 
-					</div>
+
 				</div>
-				<div class="form-group row">
-						<div class="col-sm-10">
-							<button type="button" onclick="addNewObject();" class="btn btn-primary">Ajouter</button>
-						</div>
-					</div>
+			</div>
+			<div class="form-group row">
+				<div class="col-sm-10">
+					<button type="button" onclick="addNewObject();" class="btn btn-primary">Ajouter</button>
+				</div>
+			</div>
 		</form>
 	</div>
 	</div>
